@@ -69,6 +69,7 @@ Broker:
   to 10, for example, updates will be sent at times matching x0 seconds.
   Previously update intervals were aligned to the time the broker was started.
 - Add `log_dest android` for logging to the Android logd daemon.
+- Fix some retained topic memory not being cleared immediately after used.
 
 Plugins / plugin interface:
 - Add persist-sqlite plugin.
